fix bug #49463 (setAttributeNS fails setting default namespace) add test